# assay-gui

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: check-frontend.mjs  macos-ssh-tauri.sh  screenshot-frontend.mjs  vendor-aegis.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-tray-states.ps1  icon.icns
src-tauri/src/: lib.rs  main.rs
