[package]
name = "assay-gui"
version = "0.2.0"
edition = "2021"
rust-version = "1.77"
description = "Tauri desktop utility for assay (dep-assay): live cohort-aware progress visualization for dependency upgrade sweeps"
license = "MIT OR Apache-2.0"

[lib]
name = "assay_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
